# hmm.nvim

./: Makefile  ORIG_README.md  README.md  config.hmm  hmm.nvim  init.lua  pyproject.toml
data/: non-layered-tidy-trees.py
examples/: hello.hmm  hmm.hmm  newshite.hmm  simple.hmm
lua/bootstrap/: init.lua  keymaps.lua  options.lua  plugins.lua
lua/hmm/: actions.lua  app.lua  export.lua  help.lua  htree.lua  init.lua  io.lua  keymaps.lua  paper.java  paper.lua  render.lua  spacers.lua  tree.lua
