[tool.poetry]
name = "non-layered-tidy-trees"
version = "0.0.1"
description = "Demo of algo."
authors = ["manyids2 <arun.mukundan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
numpy = "^1.24.1"
rich = "^13.0.1"
pillow = "^9.4.0"

# Test
term-image = "^0.6.0"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
